// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicnessErrorComponent should match the snapshot for a desktop viewport 1`] = `
<div>
  <div
    class="page fr-m-auto fr-mt-8w"
  >
    <h2
      class="title fr-text--bold fr-px-2w text-center"
    >
      Accès impossible
    </h2>
    <div
      class="fr-mx-auto fr-my-4w fr-px-2w fr-text--lg"
    >
      <p
        class="fr-mb-4w"
      >
        Ce service est réservé aux agents de la Fonction Publique.
      </p>
      <p
        class="fr-mb-4w"
      >
        Vous êtes rattaché à une organisation de droit privé. Vous ne pouvez pas y avoir accès.
      </p>
    </div>
  </div>
</div>
`;

exports[`PublicnessErrorComponent should match the snapshot for a tablet viewport 1`] = `
<div>
  <div
    class="page fr-m-auto fr-mt-4w"
  >
    <h2
      class="title fr-text--bold fr-px-2w text-left"
    >
      Accès impossible
    </h2>
    <div
      class="fr-mx-auto fr-my-4w fr-px-2w fr-text--lg"
    >
      <p
        class="fr-mb-4w"
      >
        Ce service est réservé aux agents de la Fonction Publique.
      </p>
      <p
        class="fr-mb-4w"
      >
        Vous êtes rattaché à une organisation de droit privé. Vous ne pouvez pas y avoir accès.
      </p>
    </div>
  </div>
</div>
`;
